@@ -15,21 +15,27 @@
  */
 package sleeper.ingest.impl;
 
-import org.apache.commons.lang3.tuple.Pair;
+import com.amazonaws.services.dynamodbv2.AmazonDynamoDB;
+import com.amazonaws.services.dynamodbv2.AmazonDynamoDBClientBuilder;
+import com.amazonaws.services.s3.AmazonS3;
+import com.amazonaws.services.s3.AmazonS3ClientBuilder;
 import org.apache.commons.text.RandomStringGenerator;
-import org.junit.jupiter.api.AfterEach;
+import org.apache.hadoop.conf.Configuration;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Named;
-import org.junit.jupiter.api.extension.RegisterExtension;
 import org.junit.jupiter.api.io.TempDir;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.testcontainers.containers.localstack.LocalStackContainer;
+import org.testcontainers.junit.jupiter.Container;
+import org.testcontainers.junit.jupiter.Testcontainers;
+import org.testcontainers.utility.DockerImageName;
+import software.amazon.awssdk.services.s3.S3AsyncClient;
 
+import sleeper.core.CommonTestConstants;
 import sleeper.core.iterator.IteratorException;
 import sleeper.core.iterator.impl.AdditionIterator;
-import sleeper.core.key.Key;
 import sleeper.core.partition.PartitionTree;
 import sleeper.core.partition.PartitionsBuilder;
 import sleeper.core.record.Record;
@@ -38,556 +44,757 @@ import sleeper.core.schema.type.ByteArrayType;
 import sleeper.core.schema.type.IntType;
 import sleeper.core.schema.type.LongType;
 import sleeper.core.schema.type.StringType;
+import sleeper.core.statestore.FileInfo;
+import sleeper.core.statestore.FileInfoFactory;
 import sleeper.core.statestore.StateStore;
 import sleeper.core.statestore.StateStoreException;
-import sleeper.ingest.impl.partitionfilewriter.AsyncS3PartitionFileWriterFactory;
-import sleeper.ingest.impl.partitionfilewriter.DirectPartitionFileWriterFactory;
-import sleeper.ingest.impl.recordbatch.arraylist.ArrayListRecordBatchFactory;
-import sleeper.ingest.impl.recordbatch.arrow.ArrowRecordBatchFactory;
-import sleeper.ingest.testutils.AwsExternalResource;
-import sleeper.ingest.testutils.QuinFunction;
+import sleeper.ingest.testutils.IngestCoordinatorTestParameters;
 import sleeper.ingest.testutils.RecordGenerator;
 import sleeper.ingest.testutils.ResultVerifier;
-import sleeper.statestore.dynamodb.DynamoDBStateStore;
+import sleeper.ingest.testutils.TestIngestType;
 import sleeper.statestore.dynamodb.DynamoDBStateStoreCreator;
 
 import java.io.IOException;
 import java.nio.file.Path;
-import java.util.AbstractMap;
+import java.nio.file.Paths;
+import java.time.Instant;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Random;
 import java.util.UUID;
-import java.util.function.Function;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.LongStream;
 import java.util.stream.Stream;
 
 import static java.nio.file.Files.createTempDirectory;
-import static sleeper.ingest.testutils.IngestCoordinatorTestHelper.parquetConfiguration;
-import static sleeper.ingest.testutils.IngestCoordinatorTestHelper.standardIngestCoordinatorBuilder;
+import static org.assertj.core.api.Assertions.assertThat;
+import static sleeper.configuration.testutils.LocalStackAwsV1ClientHelper.buildAwsV1Client;
+import static sleeper.ingest.testutils.AwsExternalResource.getHadoopConfiguration;
+import static sleeper.ingest.testutils.LocalStackAwsV2ClientHelper.buildAwsV2Client;
+import static sleeper.ingest.testutils.RecordGenerator.genericKey1D;
+import static sleeper.ingest.testutils.ResultVerifier.readMergedRecordsFromPartitionDataFiles;
+import static sleeper.ingest.testutils.ResultVerifier.readRecordsFromPartitionDataFile;
 
+@Testcontainers
 public class IngestCoordinatorCommonIT {
-    @RegisterExtension
-    public static final AwsExternalResource AWS_EXTERNAL_RESOURCE = new AwsExternalResource(
-            LocalStackContainer.Service.S3,
-            LocalStackContainer.Service.DYNAMODB);
-    private static final String DATA_BUCKET_NAME = "databucket";
+
+    @Container
+    public static LocalStackContainer localStackContainer = new LocalStackContainer(DockerImageName.parse(CommonTestConstants.LOCALSTACK_DOCKER_IMAGE))
+            .withServices(LocalStackContainer.Service.S3, LocalStackContainer.Service.DYNAMODB);
+    private final String dataBucketName = UUID.randomUUID().toString();
     @TempDir
     public Path temporaryFolder;
+    private final Configuration hadoopConfiguration = getHadoopConfiguration(localStackContainer);
+    private final AmazonS3 s3 = buildAwsV1Client(localStackContainer, LocalStackContainer.Service.S3, AmazonS3ClientBuilder.standard());
+    private final S3AsyncClient s3Async = buildAwsV2Client(localStackContainer, LocalStackContainer.Service.S3, S3AsyncClient.builder());
+    private final AmazonDynamoDB dynamoDB = buildAwsV1Client(localStackContainer, LocalStackContainer.Service.DYNAMODB, AmazonDynamoDBClientBuilder.standard());
 
-    private static String newTemporaryDirectory(Path temporaryFolder) {
-        try {
-            return createTempDirectory(temporaryFolder, null).toString();
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
-    }
-
-    private static Stream<Arguments> parametersForTests() {
+    private static Stream<Arguments> parameterObjsForTests() {
         return Stream.of(
                 Arguments.of(Named.of("Direct write, backed by Arrow, no S3",
-                        (QuinFunction<StateStore, Schema, String, String, Path, IngestCoordinator<Record>>)
-                                (stateStore, sleeperSchema, sleeperIteratorClassName, workingDir, temporaryFolder) ->
-                                        (IngestCoordinator<Record>) createIngestCoordinatorDirectWriteBackedByArrow(
-                                                stateStore,
-                                                sleeperSchema,
-                                                newTemporaryDirectory(temporaryFolder),
-                                                sleeperIteratorClassName,
-                                                workingDir
-                                        ))),
+                        TestIngestType.directWriteBackedByArrowWriteToLocalFile())),
                 Arguments.of(Named.of("Direct write, backed by Arrow, using S3",
-                        (QuinFunction<StateStore, Schema, String, String, Path, IngestCoordinator<Record>>)
-                                (stateStore, sleeperSchema, sleeperIteratorClassName, workingDir, temporaryFolder) ->
-                                        (IngestCoordinator<Record>) createIngestCoordinatorDirectWriteBackedByArrow(
-                                                stateStore,
-                                                sleeperSchema,
-                                                "s3a://" + DATA_BUCKET_NAME,
-                                                sleeperIteratorClassName,
-                                                workingDir
-                                        ))),
+                        TestIngestType.directWriteBackedByArrowWriteToS3())),
                 Arguments.of(Named.of("Async write, backed by Arrow",
-                        (QuinFunction<StateStore, Schema, String, String, Path, IngestCoordinator<Record>>)
-                                (stateStore, sleeperSchema, sleeperIteratorClassName, workingDir, temporaryFolder) ->
-                                        (IngestCoordinator<Record>) createIngestCoordinatorAsyncWriteBackedByArrow(
-                                                stateStore,
-                                                sleeperSchema,
-                                                DATA_BUCKET_NAME,
-                                                sleeperIteratorClassName,
-                                                workingDir
-                                        ))),
+                        TestIngestType.asyncWriteBackedByArrow())),
                 Arguments.of(Named.of("Direct write, backed by ArrayList, no S3",
-                        (QuinFunction<StateStore, Schema, String, String, Path, IngestCoordinator<Record>>)
-                                (stateStore, sleeperSchema, sleeperIteratorClassName, workingDir, temporaryFolder) ->
-                                        (IngestCoordinator<Record>) createIngestCoordinatorDirectWriteBackedByArrayList(
-                                                stateStore,
-                                                sleeperSchema,
-                                                newTemporaryDirectory(temporaryFolder),
-                                                sleeperIteratorClassName,
-                                                workingDir
-                                        ))),
+                        TestIngestType.directWriteBackedByArrayListWriteToLocalFile())),
                 Arguments.of(Named.of("Direct write, backed by ArrayList, using S3",
-                        (QuinFunction<StateStore, Schema, String, String, Path, IngestCoordinator<Record>>)
-                                (stateStore, sleeperSchema, sleeperIteratorClassName, workingDir, temporaryFolder) ->
-                                        (IngestCoordinator<Record>) createIngestCoordinatorDirectWriteBackedByArrayList(
-                                                stateStore,
-                                                sleeperSchema,
-                                                "s3a://" + DATA_BUCKET_NAME,
-                                                sleeperIteratorClassName,
-                                                workingDir
-                                        )))
+                        TestIngestType.directWriteBackedByArrayListWriteToS3()))
         );
-    }
-
-    private static IngestCoordinator<Record> createIngestCoordinatorDirectWriteBackedByArrow(
-            StateStore stateStore,
-            Schema sleeperSchema,
-            String filePathPrefix,
-            String sleeperIteratorClassName,
-            String ingestLocalWorkingDirectory) {
-        try {
-            ParquetConfiguration parquetConfiguration = parquetConfiguration(
-                    sleeperSchema, AWS_EXTERNAL_RESOURCE.getHadoopConfiguration());
-            return standardIngestCoordinatorBuilder(
-                    stateStore, sleeperSchema,
-                    ArrowRecordBatchFactory.builder()
-                            .schema(sleeperSchema)
-                            .maxNoOfRecordsToWriteToArrowFileAtOnce(128)
-                            .workingBufferAllocatorBytes(16 * 1024 * 1024L)
-                            .minBatchBufferAllocatorBytes(16 * 1024 * 1024L)
-                            .maxBatchBufferAllocatorBytes(16 * 1024 * 1024L)
-                            .maxNoOfBytesToWriteLocally(512 * 1024 * 1024L)
-                            .localWorkingDirectory(ingestLocalWorkingDirectory)
-                            .buildAcceptingRecords(),
-                    DirectPartitionFileWriterFactory.from(
-                            parquetConfiguration, filePathPrefix))
-                    .iteratorClassName(sleeperIteratorClassName)
-                    .build();
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
-    }
-
-
-    private static IngestCoordinator<Record> createIngestCoordinatorAsyncWriteBackedByArrow(
-            StateStore stateStore,
-            Schema sleeperSchema,
-            String s3BucketName,
-            String sleeperIteratorClassName,
-            String ingestLocalWorkingDirectory) {
-        try {
-            ParquetConfiguration parquetConfiguration = parquetConfiguration(
-                    sleeperSchema, AWS_EXTERNAL_RESOURCE.getHadoopConfiguration());
-            return standardIngestCoordinatorBuilder(
-                    stateStore, sleeperSchema,
-                    ArrowRecordBatchFactory.builder()
-                            .schema(sleeperSchema)
-                            .maxNoOfRecordsToWriteToArrowFileAtOnce(128)
-                            .workingBufferAllocatorBytes(16 * 1024 * 1024L)
-                            .minBatchBufferAllocatorBytes(16 * 1024 * 1024L)
-                            .maxBatchBufferAllocatorBytes(16 * 1024 * 1024L)
-                            .maxNoOfBytesToWriteLocally(16 * 1024 * 1024L)
-                            .localWorkingDirectory(ingestLocalWorkingDirectory)
-                            .buildAcceptingRecords(),
-                    AsyncS3PartitionFileWriterFactory.builder()
-                            .parquetConfiguration(parquetConfiguration)
-                            .s3AsyncClient(AWS_EXTERNAL_RESOURCE.getS3AsyncClient())
-                            .localWorkingDirectory(ingestLocalWorkingDirectory)
-                            .s3BucketName(s3BucketName)
-                            .build())
-                    .iteratorClassName(sleeperIteratorClassName)
-                    .build();
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
-    }
-
-    private static IngestCoordinator<Record> createIngestCoordinatorDirectWriteBackedByArrayList(
-            StateStore stateStore,
-            Schema sleeperSchema,
-            String filePathPrefix,
-            String sleeperIteratorClassName,
-            String ingestLocalWorkingDirectory) {
-        try {
-            ParquetConfiguration parquetConfiguration = parquetConfiguration(
-                    sleeperSchema, AWS_EXTERNAL_RESOURCE.getHadoopConfiguration());
-            return standardIngestCoordinatorBuilder(
-                    stateStore, sleeperSchema,
-                    ArrayListRecordBatchFactory.builder()
-                            .parquetConfiguration(parquetConfiguration)
-                            .maxNoOfRecordsInLocalStore(1000)
-                            .maxNoOfRecordsInMemory(100000)
-                            .localWorkingDirectory(ingestLocalWorkingDirectory)
-                            .buildAcceptingRecords(),
-                    DirectPartitionFileWriterFactory.from(
-                            parquetConfiguration, filePathPrefix))
-                    .iteratorClassName(sleeperIteratorClassName)
-                    .build();
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
     }
 
     @BeforeEach
     public void before() {
-        AWS_EXTERNAL_RESOURCE.getS3Client().createBucket(DATA_BUCKET_NAME);
+        s3.createBucket(dataBucketName);
     }
 
-    @AfterEach
-    public void after() {
-        AWS_EXTERNAL_RESOURCE.clear();
+    private StateStore createStateStore(Schema schema) {
+        return new DynamoDBStateStoreCreator(UUID.randomUUID().toString(), schema, dynamoDB).create();
     }
 
     @ParameterizedTest
-    @MethodSource("parametersForTests")
-    public void shouldWriteRecordsCorrectly(
-            QuinFunction<StateStore, Schema, String, String, Path, IngestCoordinator<Record>> ingestCoordinatorFactoryFn)
+    @MethodSource("parameterObjsForTests")
+    public void shouldWriteRecordsCorrectly(TestIngestType ingestType)
             throws StateStoreException, IOException, IteratorException {
-        RecordGenerator.RecordListAndSchema recordListAndSchema = RecordGenerator.genericKey1D(
+        // Given
+        RecordGenerator.RecordListAndSchema recordListAndSchema = genericKey1D(
                 new LongType(),
                 LongStream.range(-100, 100).boxed().collect(Collectors.toList()));
-        Function<Key, Integer> keyToPartitionNoMappingFn = key -> 0;
-        Map<Integer, Integer> partitionNoToExpectedNoOfFilesMap = Stream.of(
-                        new AbstractMap.SimpleEntry<>(0, 1))
-                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
-
+        StateStore stateStore = createStateStore(recordListAndSchema.sleeperSchema);
         PartitionTree tree = new PartitionsBuilder(recordListAndSchema.sleeperSchema)
                 .rootFirst("root")
                 .buildTree();
+        stateStore.initialise(tree.getAllPartitions());
+        Instant stateStoreUpdateTime = Instant.parse("2023-08-08T11:20:00Z");
+        String ingestLocalWorkingDirectory = createTempDirectory(temporaryFolder, null).toString() + "/path/to/new/sub/directory";
+        IngestCoordinatorTestParameters parameters = createTestParameterBuilder()
+                .fileNames(List.of("rootFile"))
+                .fileUpdatedTimes(List.of(stateStoreUpdateTime))
+                .stateStore(stateStore)
+                .schema(recordListAndSchema.sleeperSchema)
+                .workingDir(ingestLocalWorkingDirectory)
+                .build();
 
-        ingestAndVerify(recordListAndSchema,
-                tree,
-                recordListAndSchema.recordList,
-                keyToPartitionNoMappingFn,
-                partitionNoToExpectedNoOfFilesMap,
-                null,
-                ingestCoordinatorFactoryFn);
+        // When
+        ingestRecords(recordListAndSchema, parameters, ingestType);
+
+        // Then
+        List<FileInfo> actualFiles = stateStore.getActiveFiles();
+        List<Record> actualRecords = readMergedRecordsFromPartitionDataFiles(recordListAndSchema.sleeperSchema, actualFiles, hadoopConfiguration);
+        FileInfo fileInfo = FileInfoFactory.builder()
+                .partitionTree(tree)
+                .lastStateStoreUpdate(stateStoreUpdateTime)
+                .schema(recordListAndSchema.sleeperSchema)
+                .build()
+                .rootFile(ingestType.getFilePrefix(parameters) + "/partition_root/rootFile.parquet", 200, -100L, 99L);
+
+        assertThat(Paths.get(ingestLocalWorkingDirectory)).isEmptyDirectory();
+        assertThat(actualFiles).containsExactly(fileInfo);
+        assertThat(actualRecords).containsExactlyInAnyOrderElementsOf(recordListAndSchema.recordList);
+        assertThat(actualRecords).extracting(record -> record.getValues(List.of("key0")))
+                .containsExactlyElementsOf(LongStream.range(-100, 100).boxed()
+                        .map(List::<Object>of)
+                        .collect(Collectors.toList()));
+
+        ResultVerifier.assertOnSketch(
+                recordListAndSchema.sleeperSchema.getField("key0").orElseThrow(),
+                recordListAndSchema,
+                actualFiles,
+                hadoopConfiguration
+        );
     }
 
     @ParameterizedTest
-    @MethodSource("parametersForTests")
-    public void shouldWriteManyRecordsCorrectly(
-            QuinFunction<StateStore, Schema, String, String, Path, IngestCoordinator<Record>> ingestCoordinatorFactoryFn)
+    @MethodSource("parameterObjsForTests")
+    public void shouldWriteManyRecordsCorrectly(TestIngestType ingestType)
             throws StateStoreException, IOException, IteratorException {
-        RecordGenerator.RecordListAndSchema recordListAndSchema = RecordGenerator.genericKey1D(
+        // Given
+        RecordGenerator.RecordListAndSchema recordListAndSchema = genericKey1D(
                 new LongType(),
                 LongStream.range(-10000, 10000).boxed().collect(Collectors.toList()));
-        Function<Key, Integer> keyToPartitionNoMappingFn = key -> 0;
-        Map<Integer, Integer> partitionNoToExpectedNoOfFilesMap = Stream.of(
-                        new AbstractMap.SimpleEntry<>(0, 1))
-                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
+        StateStore stateStore = createStateStore(recordListAndSchema.sleeperSchema);
         PartitionTree tree = new PartitionsBuilder(recordListAndSchema.sleeperSchema)
                 .rootFirst("root")
                 .buildTree();
-        ingestAndVerify(recordListAndSchema,
-                tree,
-                recordListAndSchema.recordList,
-                keyToPartitionNoMappingFn,
-                partitionNoToExpectedNoOfFilesMap,
-                null,
-                ingestCoordinatorFactoryFn);
+        stateStore.initialise(tree.getAllPartitions());
+        Instant stateStoreUpdateTime = Instant.parse("2023-08-08T11:20:00Z");
+        String ingestLocalWorkingDirectory = createTempDirectory(temporaryFolder, null).toString() + "/path/to/new/sub/directory";
+        IngestCoordinatorTestParameters parameters = createTestParameterBuilder()
+                .fileNames(List.of("rootFile"))
+                .fileUpdatedTimes(List.of(stateStoreUpdateTime))
+                .stateStore(stateStore)
+                .schema(recordListAndSchema.sleeperSchema)
+                .workingDir(ingestLocalWorkingDirectory)
+                .build();
+
+        // When
+        ingestRecords(recordListAndSchema, parameters, ingestType);
+
+        // Then
+        List<FileInfo> actualFiles = stateStore.getActiveFiles();
+        List<Record> actualRecords = readMergedRecordsFromPartitionDataFiles(recordListAndSchema.sleeperSchema, actualFiles, hadoopConfiguration);
+        FileInfo fileInfo = FileInfoFactory.builder()
+                .partitionTree(tree)
+                .lastStateStoreUpdate(stateStoreUpdateTime)
+                .schema(recordListAndSchema.sleeperSchema)
+                .build()
+                .rootFile(ingestType.getFilePrefix(parameters) + "/partition_root/rootFile.parquet", 20000, -10000L, 9999L);
+
+        assertThat(Paths.get(ingestLocalWorkingDirectory)).isEmptyDirectory();
+        assertThat(actualFiles).containsExactly(fileInfo);
+        assertThat(actualRecords).containsExactlyInAnyOrderElementsOf(recordListAndSchema.recordList);
+        assertThat(actualRecords).extracting(record -> record.getValues(List.of("key0")))
+                .containsExactlyElementsOf(LongStream.range(-10000, 10000).boxed()
+                        .map(List::<Object>of)
+                        .collect(Collectors.toList()));
+
+        ResultVerifier.assertOnSketch(
+                recordListAndSchema.sleeperSchema.getField("key0").orElseThrow(),
+                recordListAndSchema,
+                actualFiles,
+                hadoopConfiguration
+        );
     }
 
     @ParameterizedTest
-    @MethodSource("parametersForTests")
-    public void shouldWriteRecordsSplitByPartitionIntKey(
-            QuinFunction<StateStore, Schema, String, String, Path, IngestCoordinator<Record>> ingestCoordinatorFactoryFn)
+    @MethodSource("parameterObjsForTests")
+    public void shouldWriteRecordsSplitByPartitionIntKey(TestIngestType ingestType)
             throws StateStoreException, IOException, IteratorException {
-        RecordGenerator.RecordListAndSchema recordListAndSchema = RecordGenerator.genericKey1D(
+        RecordGenerator.RecordListAndSchema recordListAndSchema = genericKey1D(
                 new IntType(),
                 IntStream.range(-100, 100).boxed().collect(Collectors.toList()));
-        List<Pair<Key, Integer>> keyAndDimensionToSplitOnInOrder = Collections.singletonList(
-                Pair.of(Key.create(2), 0));
-        Function<Key, Integer> keyToPartitionNoMappingFn = key -> (((Integer) key.get(0)) < 2) ? 0 : 1;
-        Map<Integer, Integer> partitionNoToExpectedNoOfFilesMap = Stream.of(
-                        new AbstractMap.SimpleEntry<>(0, 1),
-                        new AbstractMap.SimpleEntry<>(1, 1))
-                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
-
+        StateStore stateStore = createStateStore(recordListAndSchema.sleeperSchema);
         PartitionTree tree = new PartitionsBuilder(recordListAndSchema.sleeperSchema)
                 .rootFirst("root")
                 .splitToNewChildren("root", "left", "right", 2)
                 .buildTree();
+        stateStore.initialise(tree.getAllPartitions());
+        Instant stateStoreUpdateTime = Instant.parse("2023-08-08T11:20:00Z");
+        String ingestLocalWorkingDirectory = createTempDirectory(temporaryFolder, null).toString() + "/path/to/new/sub/directory";
+        IngestCoordinatorTestParameters parameters = createTestParameterBuilder()
+                .fileNames(List.of("leftFile", "rightFile"))
+                .fileUpdatedTimes(List.of(stateStoreUpdateTime, stateStoreUpdateTime, stateStoreUpdateTime))
+                .stateStore(stateStore)
+                .schema(recordListAndSchema.sleeperSchema)
+                .workingDir(ingestLocalWorkingDirectory)
+                .build();
 
-        ingestAndVerify(recordListAndSchema,
-                tree,
-                recordListAndSchema.recordList,
-                keyToPartitionNoMappingFn,
-                partitionNoToExpectedNoOfFilesMap,
-                null,
-                ingestCoordinatorFactoryFn);
+        // When
+        ingestRecords(recordListAndSchema, parameters, ingestType);
+
+        // Then
+        List<FileInfo> actualFiles = stateStore.getActiveFiles();
+        FileInfoFactory fileInfoFactory = FileInfoFactory.builder()
+                .partitionTree(tree)
+                .lastStateStoreUpdate(stateStoreUpdateTime)
+                .schema(recordListAndSchema.sleeperSchema)
+                .build();
+        FileInfo leftFile = fileInfoFactory.leafFile(ingestType.getFilePrefix(parameters) + "/partition_left/leftFile.parquet", 102, -100, 1);
+        FileInfo rightFile = fileInfoFactory.leafFile(ingestType.getFilePrefix(parameters) + "/partition_right/rightFile.parquet", 98, 2, 99);
+        List<Record> leftRecords = readRecordsFromPartitionDataFile(recordListAndSchema.sleeperSchema, leftFile, hadoopConfiguration);
+        List<Record> rightRecords = readRecordsFromPartitionDataFile(recordListAndSchema.sleeperSchema, rightFile, hadoopConfiguration);
+        List<Record> allRecords = Stream.of(leftRecords, rightRecords)
+                .flatMap(List::stream).collect(Collectors.toUnmodifiableList());
+
+        assertThat(Paths.get(ingestLocalWorkingDirectory)).isEmptyDirectory();
+        assertThat(actualFiles).containsExactlyInAnyOrder(leftFile, rightFile);
+        assertThat(allRecords).containsExactlyInAnyOrderElementsOf(recordListAndSchema.recordList);
+        assertThat(leftRecords).extracting(record -> record.getValues(List.of("key0")).get(0))
+                .containsExactly(IntStream.range(-100, 2).boxed().toArray());
+        assertThat(rightRecords).extracting(record -> record.getValues(List.of("key0")).get(0))
+                .containsExactly(IntStream.range(2, 100).boxed().toArray());
+
+        ResultVerifier.assertOnSketch(
+                recordListAndSchema.sleeperSchema.getField("key0").orElseThrow(),
+                recordListAndSchema,
+                actualFiles,
+                hadoopConfiguration
+        );
     }
 
     @ParameterizedTest
-    @MethodSource("parametersForTests")
-    public void shouldWriteRecordsSplitByPartitionLongKey(
-            QuinFunction<StateStore, Schema, String, String, Path, IngestCoordinator<Record>> ingestCoordinatorFactoryFn)
+    @MethodSource("parameterObjsForTests")
+    public void shouldWriteRecordsSplitByPartitionLongKey(TestIngestType ingestType)
             throws StateStoreException, IOException, IteratorException {
-        RecordGenerator.RecordListAndSchema recordListAndSchema = RecordGenerator.genericKey1D(
+        RecordGenerator.RecordListAndSchema recordListAndSchema = genericKey1D(
                 new LongType(),
                 LongStream.range(-100, 100).boxed().collect(Collectors.toList()));
-        Function<Key, Integer> keyToPartitionNoMappingFn = key -> (((Long) key.get(0)) < 2L) ? 0 : 1;
-        Map<Integer, Integer> partitionNoToExpectedNoOfFilesMap = Stream.of(
-                        new AbstractMap.SimpleEntry<>(0, 1),
-                        new AbstractMap.SimpleEntry<>(1, 1))
-                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
-
+        StateStore stateStore = createStateStore(recordListAndSchema.sleeperSchema);
         PartitionTree tree = new PartitionsBuilder(recordListAndSchema.sleeperSchema)
                 .rootFirst("root")
                 .splitToNewChildren("root", "left", "right", 2L)
                 .buildTree();
+        stateStore.initialise(tree.getAllPartitions());
+        Instant stateStoreUpdateTime = Instant.parse("2023-08-08T11:20:00Z");
+        String ingestLocalWorkingDirectory = createTempDirectory(temporaryFolder, null).toString() + "/path/to/new/sub/directory";
+        IngestCoordinatorTestParameters parameters = createTestParameterBuilder()
+                .fileNames(List.of("leftFile", "rightFile"))
+                .fileUpdatedTimes(() -> stateStoreUpdateTime)
+                .stateStore(stateStore)
+                .schema(recordListAndSchema.sleeperSchema)
+                .workingDir(ingestLocalWorkingDirectory)
+                .build();
 
-        ingestAndVerify(recordListAndSchema,
-                tree,
-                recordListAndSchema.recordList,
-                keyToPartitionNoMappingFn,
-                partitionNoToExpectedNoOfFilesMap,
-                null,
-                ingestCoordinatorFactoryFn);
+        // When
+        ingestRecords(recordListAndSchema, parameters, ingestType);
+
+        // Then
+        List<FileInfo> actualFiles = stateStore.getActiveFiles();
+        FileInfoFactory fileInfoFactory = FileInfoFactory.builder()
+                .partitionTree(tree)
+                .lastStateStoreUpdate(stateStoreUpdateTime)
+                .schema(recordListAndSchema.sleeperSchema)
+                .build();
+        FileInfo leftFile = fileInfoFactory.leafFile(ingestType.getFilePrefix(parameters) + "/partition_left/leftFile.parquet", 102, -100L, 1L);
+        FileInfo rightFile = fileInfoFactory.leafFile(ingestType.getFilePrefix(parameters) + "/partition_right/rightFile.parquet", 98, 2L, 99L);
+        List<Record> leftRecords = readRecordsFromPartitionDataFile(recordListAndSchema.sleeperSchema, leftFile, hadoopConfiguration);
+        List<Record> rightRecords = readRecordsFromPartitionDataFile(recordListAndSchema.sleeperSchema, rightFile, hadoopConfiguration);
+        List<Record> allRecords = Stream.of(leftRecords, rightRecords)
+                .flatMap(List::stream).collect(Collectors.toUnmodifiableList());
+
+        assertThat(Paths.get(ingestLocalWorkingDirectory)).isEmptyDirectory();
+        assertThat(actualFiles).containsExactlyInAnyOrder(leftFile, rightFile);
+        assertThat(allRecords).containsExactlyInAnyOrderElementsOf(recordListAndSchema.recordList);
+        assertThat(leftRecords).extracting(record -> record.getValues(List.of("key0")).get(0))
+                .containsExactly(LongStream.range(-100, 2).boxed().toArray());
+        assertThat(rightRecords).extracting(record -> record.getValues(List.of("key0")).get(0))
+                .containsExactly(LongStream.range(2, 100).boxed().toArray());
+
+        ResultVerifier.assertOnSketch(
+                recordListAndSchema.sleeperSchema.getField("key0").orElseThrow(),
+                recordListAndSchema,
+                actualFiles,
+                hadoopConfiguration
+        );
     }
 
     @ParameterizedTest
-    @MethodSource("parametersForTests")
-    public void shouldWriteRecordsSplitByPartitionStringKey(
-            QuinFunction<StateStore, Schema, String, String, Path, IngestCoordinator<Record>> ingestCoordinatorFactoryFn)
-            throws StateStoreException, IOException, IteratorException {
+    @MethodSource("parameterObjsForTests")
+    public void shouldWriteRecordsSplitByPartitionStringKey(TestIngestType ingestType)
+            throws Exception {
         // RandomStringGenerator generates random unicode strings to test both standard and unusual character sets
-        Random random = new Random(0);
-        RandomStringGenerator randomStringGenerator = new RandomStringGenerator.Builder()
-                .usingRandom(random::nextInt)
-                .build();
-        RecordGenerator.RecordListAndSchema recordListAndSchema = RecordGenerator.genericKey1D(
-                new StringType(),
-                LongStream.range(-100, 100)
-                        .mapToObj(longValue -> String.format("%09d-%s", longValue, randomStringGenerator.generate(random.nextInt(25))))
-                        .collect(Collectors.toList()));
-        String splitPoint = String.format("%09d", 2);
-        Function<Key, Integer> keyToPartitionNoMappingFn = key -> (((String) key.get(0)).compareTo(splitPoint) < 0) ? 0 : 1;
-        Map<Integer, Integer> partitionNoToExpectedNoOfFilesMap = Stream.of(
-                        new AbstractMap.SimpleEntry<>(0, 1),
-                        new AbstractMap.SimpleEntry<>(1, 1))
-                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
-
+        Supplier<String> randomString = randomStringGeneratorWithMaxLength(25);
+        List<String> keys = LongStream.range(0, 200)
+                .mapToObj(longValue -> String.format("%09d-%s", longValue, randomString.get()))
+                .collect(Collectors.toList());
+        RecordGenerator.RecordListAndSchema recordListAndSchema = genericKey1D(new StringType(), keys);
+        StateStore stateStore = createStateStore(recordListAndSchema.sleeperSchema);
         PartitionTree tree = new PartitionsBuilder(recordListAndSchema.sleeperSchema)
                 .rootFirst("root")
-                .splitToNewChildren("root", "left", "right", splitPoint)
+                .splitToNewChildren("root", "left", "right", "000000102")
                 .buildTree();
+        stateStore.initialise(tree.getAllPartitions());
+        Instant stateStoreUpdateTime = Instant.parse("2023-08-08T11:20:00Z");
+        String ingestLocalWorkingDirectory = createTempDirectory(temporaryFolder, null).toString() + "/path/to/new/sub/directory";
+        IngestCoordinatorTestParameters parameters = createTestParameterBuilder()
+                .fileNames(List.of("leftFile", "rightFile"))
+                .fileUpdatedTimes(List.of(stateStoreUpdateTime, stateStoreUpdateTime, stateStoreUpdateTime))
+                .stateStore(stateStore)
+                .schema(recordListAndSchema.sleeperSchema)
+                .workingDir(ingestLocalWorkingDirectory)
+                .build();
 
-        ingestAndVerify(recordListAndSchema,
-                tree,
-                recordListAndSchema.recordList,
-                keyToPartitionNoMappingFn,
-                partitionNoToExpectedNoOfFilesMap,
-                null,
-                ingestCoordinatorFactoryFn);
+        // When
+        ingestRecords(recordListAndSchema, parameters, ingestType);
+
+
+        // Then
+        List<FileInfo> actualFiles = stateStore.getActiveFiles();
+        FileInfoFactory fileInfoFactory = FileInfoFactory.builder()
+                .partitionTree(tree)
+                .lastStateStoreUpdate(stateStoreUpdateTime)
+                .schema(recordListAndSchema.sleeperSchema)
+                .build();
+        FileInfo leftFile = fileInfoFactory.leafFile(ingestType.getFilePrefix(parameters) + "/partition_left/leftFile.parquet", 102, keys.get(0), keys.get(101));
+        FileInfo rightFile = fileInfoFactory.leafFile(ingestType.getFilePrefix(parameters) + "/partition_right/rightFile.parquet", 98, keys.get(102), keys.get(199));
+        List<Record> leftRecords = readRecordsFromPartitionDataFile(recordListAndSchema.sleeperSchema, leftFile, hadoopConfiguration);
+        List<Record> rightRecords = readRecordsFromPartitionDataFile(recordListAndSchema.sleeperSchema, rightFile, hadoopConfiguration);
+        List<Record> allRecords = Stream.of(leftRecords, rightRecords)
+                .flatMap(List::stream).collect(Collectors.toUnmodifiableList());
+
+        assertThat(Paths.get(ingestLocalWorkingDirectory)).isEmptyDirectory();
+        assertThat(actualFiles).containsExactlyInAnyOrder(leftFile, rightFile);
+        assertThat(allRecords).containsExactlyInAnyOrderElementsOf(recordListAndSchema.recordList);
+        assertThat(leftRecords).extracting(record -> record.getValues(List.of("key0")).get(0))
+                .containsExactlyElementsOf(keys.subList(0, 102));
+        assertThat(rightRecords).extracting(record -> record.getValues(List.of("key0")).get(0))
+                .containsExactlyElementsOf(keys.subList(102, 200));
+
+        ResultVerifier.assertOnSketch(
+                recordListAndSchema.sleeperSchema.getField("key0").orElseThrow(),
+                recordListAndSchema,
+                actualFiles,
+                hadoopConfiguration
+        );
     }
 
     @ParameterizedTest
-    @MethodSource("parametersForTests")
-    public void shouldWriteRecordsSplitByPartitionByteArrayKey(
-            QuinFunction<StateStore, Schema, String, String, Path, IngestCoordinator<Record>> ingestCoordinatorFactoryFn)
+    @MethodSource("parameterObjsForTests")
+    public void shouldWriteRecordsSplitByPartitionByteArrayKey(TestIngestType ingestType)
             throws StateStoreException, IOException, IteratorException {
-        RecordGenerator.RecordListAndSchema recordListAndSchema = RecordGenerator.genericKey1D(
+        RecordGenerator.RecordListAndSchema recordListAndSchema = genericKey1D(
                 new ByteArrayType(),
                 Arrays.asList(
                         new byte[]{1, 1},
                         new byte[]{2, 2},
                         new byte[]{64, 65}));
-        Function<Key, Integer> keyToPartitionNoMappingFn = key -> {
-            byte[] byteArray = (byte[]) key.get(0);
-            return (byteArray[0] < 64 && byteArray[1] < 64) ? 0 : 1;
-        };
-        Map<Integer, Integer> partitionNoToExpectedNoOfFilesMap = Stream.of(
-                        new AbstractMap.SimpleEntry<>(0, 1),
-                        new AbstractMap.SimpleEntry<>(1, 1))
-                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
-
+        StateStore stateStore = createStateStore(recordListAndSchema.sleeperSchema);
         PartitionTree tree = new PartitionsBuilder(recordListAndSchema.sleeperSchema)
                 .rootFirst("root")
                 .splitToNewChildren("root", "left", "right", new byte[]{64, 64})
                 .buildTree();
+        stateStore.initialise(tree.getAllPartitions());
+        Instant stateStoreUpdateTime = Instant.parse("2023-08-08T11:20:00Z");
+        String ingestLocalWorkingDirectory = createTempDirectory(temporaryFolder, null).toString() + "/path/to/new/sub/directory";
+        IngestCoordinatorTestParameters parameters = createTestParameterBuilder()
+                .fileNames(List.of("leftFile", "rightFile"))
+                .fileUpdatedTimes(List.of(stateStoreUpdateTime, stateStoreUpdateTime, stateStoreUpdateTime))
+                .stateStore(stateStore)
+                .schema(recordListAndSchema.sleeperSchema)
+                .workingDir(ingestLocalWorkingDirectory)
+                .build();
 
-        ingestAndVerify(recordListAndSchema,
-                tree,
-                recordListAndSchema.recordList,
-                keyToPartitionNoMappingFn,
-                partitionNoToExpectedNoOfFilesMap,
-                null,
-                ingestCoordinatorFactoryFn);
+        // When
+        ingestRecords(recordListAndSchema, parameters, ingestType);
+
+        // Then
+        List<FileInfo> actualFiles = stateStore.getActiveFiles();
+        FileInfoFactory fileInfoFactory = FileInfoFactory.builder()
+                .partitionTree(tree)
+                .lastStateStoreUpdate(stateStoreUpdateTime)
+                .schema(recordListAndSchema.sleeperSchema)
+                .build();
+        FileInfo leftFile = fileInfoFactory.leafFile(ingestType.getFilePrefix(parameters) + "/partition_left/leftFile.parquet", 2, new byte[]{1, 1}, new byte[]{2, 2});
+        FileInfo rightFile = fileInfoFactory.leafFile(ingestType.getFilePrefix(parameters) + "/partition_right/rightFile.parquet", 1, new byte[]{64, 65}, new byte[]{64, 65});
+        List<Record> leftRecords = readRecordsFromPartitionDataFile(recordListAndSchema.sleeperSchema, leftFile, hadoopConfiguration);
+        List<Record> rightRecords = readRecordsFromPartitionDataFile(recordListAndSchema.sleeperSchema, rightFile, hadoopConfiguration);
+        List<Record> allRecords = Stream.of(leftRecords, rightRecords)
+                .flatMap(List::stream).collect(Collectors.toUnmodifiableList());
+
+        assertThat(Paths.get(ingestLocalWorkingDirectory)).isEmptyDirectory();
+        assertThat(actualFiles).containsExactlyInAnyOrder(leftFile, rightFile);
+        assertThat(allRecords).containsExactlyInAnyOrderElementsOf(recordListAndSchema.recordList);
+        assertThat(leftRecords).extracting(record -> record.getValues(List.of("key0")).get(0))
+                .containsExactly(new byte[]{1, 1}, new byte[]{2, 2});
+        assertThat(rightRecords).extracting(record -> record.getValues(List.of("key0")).get(0))
+                .containsExactly(new byte[]{64, 65});
+
+        ResultVerifier.assertOnSketch(
+                recordListAndSchema.sleeperSchema.getField("key0").orElseThrow(),
+                recordListAndSchema,
+                actualFiles,
+                hadoopConfiguration
+        );
     }
 
-
     @ParameterizedTest
-    @MethodSource("parametersForTests")
-    public void shouldWriteRecordsSplitByPartitionStringKeyLongSortKey(
-            QuinFunction<StateStore, Schema, String, String, Path, IngestCoordinator<Record>> ingestCoordinatorFactoryFn)
-            throws StateStoreException, IOException, IteratorException {
+    @MethodSource("parameterObjsForTests")
+    public void shouldWriteRecordsSplitByPartitionStringKeyLongSortKey(TestIngestType ingestType)
+            throws Exception {
         // RandomStringGenerator generates random unicode strings to test both standard and unusual character sets
-        Random random = new Random(0);
-        RandomStringGenerator randomStringGenerator = new RandomStringGenerator.Builder()
-                .usingRandom(random::nextInt)
-                .build();
+        Supplier<String> randomString = randomStringGeneratorWithMaxLength(25);
+        List<String> stringKeys = LongStream.range(0, 200)
+                .mapToObj(longValue -> String.format("%09d-%s", longValue, randomString.get()))
+                .flatMap(str -> Stream.of(str, str, str))
+                .collect(Collectors.toList());
+        List<Long> longKeys = LongStream.range(-100, 100).boxed()
+                .flatMap(longValue -> Stream.of(longValue - 1000L, longValue, longValue + 1000L))
+                .collect(Collectors.toList());
         RecordGenerator.RecordListAndSchema recordListAndSchema = RecordGenerator.genericKey1DSort1D(
                 new StringType(),
                 new LongType(),
-                LongStream.range(-100, 100).boxed()
-                        .map(longValue -> String.format("%09d-%s", longValue, randomStringGenerator.generate(random.nextInt(25))))
-                        .flatMap(str -> Stream.of(str, str, str))
-                        .collect(Collectors.toList()),
-                LongStream.range(-100, 100).boxed()
-                        .flatMap(longValue -> Stream.of(longValue + 1000L, longValue, longValue - 1000L))
-                        .collect(Collectors.toList()));
-        String splitPoint = String.format("%09d", 2);
-        List<Pair<Key, Integer>> keyAndDimensionToSplitOnInOrder = Collections.singletonList(
-                Pair.of(Key.create(splitPoint), 0));
-        Function<Key, Integer> keyToPartitionNoMappingFn = key -> (((String) key.get(0)).compareTo(splitPoint) < 0) ? 0 : 1;
-        Map<Integer, Integer> partitionNoToExpectedNoOfFilesMap = Stream.of(
-                        new AbstractMap.SimpleEntry<>(0, 1),
-                        new AbstractMap.SimpleEntry<>(1, 1))
-                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
-
+                stringKeys, longKeys);
+        StateStore stateStore = createStateStore(recordListAndSchema.sleeperSchema);
         PartitionTree tree = new PartitionsBuilder(recordListAndSchema.sleeperSchema)
                 .rootFirst("root")
-                .splitToNewChildrenOnDimension("root", "left", "right", 0, splitPoint)
+                .splitToNewChildrenOnDimension("root", "left", "right", 0, "000000102")
                 .buildTree();
+        stateStore.initialise(tree.getAllPartitions());
+        Instant stateStoreUpdateTime = Instant.parse("2023-08-08T11:20:00Z");
+        String ingestLocalWorkingDirectory = createTempDirectory(temporaryFolder, null).toString() + "/path/to/new/sub/directory";
+        IngestCoordinatorTestParameters parameters = createTestParameterBuilder()
+                .fileNames(List.of("leftFile", "rightFile"))
+                .fileUpdatedTimes(List.of(stateStoreUpdateTime, stateStoreUpdateTime, stateStoreUpdateTime))
+                .stateStore(stateStore)
+                .schema(recordListAndSchema.sleeperSchema)
+                .workingDir(ingestLocalWorkingDirectory)
+                .build();
 
-        ingestAndVerify(recordListAndSchema,
-                tree,
-                recordListAndSchema.recordList,
-                keyToPartitionNoMappingFn,
-                partitionNoToExpectedNoOfFilesMap,
-                null,
-                ingestCoordinatorFactoryFn);
+        // When
+        ingestRecords(recordListAndSchema, parameters, ingestType);
+
+        // Then
+        List<FileInfo> actualFiles = stateStore.getActiveFiles();
+        FileInfoFactory fileInfoFactory = FileInfoFactory.builder()
+                .partitionTree(tree)
+                .lastStateStoreUpdate(stateStoreUpdateTime)
+                .schema(recordListAndSchema.sleeperSchema)
+                .build();
+        FileInfo leftFile = fileInfoFactory.leafFile(ingestType.getFilePrefix(parameters) + "/partition_left/leftFile.parquet", 306, stringKeys.get(0), stringKeys.get(303));
+        FileInfo rightFile = fileInfoFactory.leafFile(ingestType.getFilePrefix(parameters) + "/partition_right/rightFile.parquet", 294, stringKeys.get(306), stringKeys.get(597));
+        List<Record> leftRecords = readRecordsFromPartitionDataFile(recordListAndSchema.sleeperSchema, leftFile, hadoopConfiguration);
+        List<Record> rightRecords = readRecordsFromPartitionDataFile(recordListAndSchema.sleeperSchema, rightFile, hadoopConfiguration);
+        List<Record> allRecords = Stream.of(leftRecords, rightRecords)
+                .flatMap(List::stream).collect(Collectors.toUnmodifiableList());
+
+        assertThat(Paths.get(ingestLocalWorkingDirectory)).isEmptyDirectory();
+        assertThat(actualFiles).containsExactlyInAnyOrder(leftFile, rightFile);
+        assertThat(allRecords).containsExactlyInAnyOrderElementsOf(recordListAndSchema.recordList);
+        assertThat(leftRecords).extracting(record -> record.getValues(List.of("key0")).get(0))
+                .containsExactlyElementsOf(stringKeys.subList(0, 306));
+        assertThat(leftRecords).extracting(record -> record.getValues(List.of("sortKey0")).get(0))
+                .containsExactlyElementsOf(longKeys.subList(0, 306));
+        assertThat(rightRecords).extracting(record -> record.getValues(List.of("key0")).get(0))
+                .containsExactlyElementsOf(stringKeys.subList(306, 600));
+        assertThat(rightRecords).extracting(record -> record.getValues(List.of("sortKey0")).get(0))
+                .containsExactlyElementsOf(longKeys.subList(306, 600));
+
+        ResultVerifier.assertOnSketch(
+                recordListAndSchema.sleeperSchema.getField("key0").orElseThrow(),
+                recordListAndSchema,
+                actualFiles,
+                hadoopConfiguration
+        );
     }
 
     @ParameterizedTest
-    @MethodSource("parametersForTests")
-    public void shouldWriteRecordsSplitByPartition2DimensionalByteArrayKey(
-            QuinFunction<StateStore, Schema, String, String, Path, IngestCoordinator<Record>> ingestCoordinatorFactoryFn)
+    @MethodSource("parameterObjsForTests")
+    public void shouldWriteRecordsSplitByPartition2DimensionalByteArrayKey(TestIngestType ingestType)
             throws StateStoreException, IOException, IteratorException {
         RecordGenerator.RecordListAndSchema recordListAndSchema = RecordGenerator.genericKey2D(
                 new ByteArrayType(), new ByteArrayType(),
                 Arrays.asList(new byte[]{1, 1}, new byte[]{11, 2}, new byte[]{64, 65}, new byte[]{5}),
                 Arrays.asList(new byte[]{2, 3}, new byte[]{2, 2}, new byte[]{67, 68}, new byte[]{99}));
-        Function<Key, Integer> keyToPartitionNoMappingFn = key -> {
-            byte[] byteArray = (byte[]) key.get(0);
-            return (byteArray[0] < 10) ? 0 : 1;
-        };
-        Map<Integer, Integer> partitionNoToExpectedNoOfFilesMap = Stream.of(
-                        new AbstractMap.SimpleEntry<>(0, 1),
-                        new AbstractMap.SimpleEntry<>(1, 1))
-                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
-
+        StateStore stateStore = createStateStore(recordListAndSchema.sleeperSchema);
         PartitionTree tree = new PartitionsBuilder(recordListAndSchema.sleeperSchema)
                 .rootFirst("root")
                 .splitToNewChildrenOnDimension("root", "left", "right", 0, new byte[]{10})
                 .buildTree();
+        stateStore.initialise(tree.getAllPartitions());
+        Instant stateStoreUpdateTime = Instant.parse("2023-08-08T11:20:00Z");
+        String ingestLocalWorkingDirectory = createTempDirectory(temporaryFolder, null).toString() + "/path/to/new/sub/directory";
+        IngestCoordinatorTestParameters parameters = createTestParameterBuilder()
+                .fileNames(List.of("leftFile", "rightFile"))
+                .fileUpdatedTimes(() -> stateStoreUpdateTime)
+                .stateStore(stateStore)
+                .schema(recordListAndSchema.sleeperSchema)
+                .workingDir(ingestLocalWorkingDirectory)
+                .build();
 
-        ingestAndVerify(recordListAndSchema,
-                tree,
-                recordListAndSchema.recordList,
-                keyToPartitionNoMappingFn,
-                partitionNoToExpectedNoOfFilesMap,
-                null,
-                ingestCoordinatorFactoryFn);
+        // When
+        ingestRecords(recordListAndSchema, parameters, ingestType);
+
+        // Then
+        List<FileInfo> actualFiles = stateStore.getActiveFiles();
+        FileInfoFactory fileInfoFactory = FileInfoFactory.builder()
+                .partitionTree(tree)
+                .lastStateStoreUpdate(stateStoreUpdateTime)
+                .schema(recordListAndSchema.sleeperSchema)
+                .build();
+        FileInfo leftFile = fileInfoFactory.partitionFile("left", ingestType.getFilePrefix(parameters) +
+                "/partition_left/leftFile.parquet", 2, new byte[]{1, 1}, new byte[]{5});
+        FileInfo rightFile = fileInfoFactory.partitionFile("right", ingestType.getFilePrefix(parameters) +
+                "/partition_right/rightFile.parquet", 2, new byte[]{11, 2}, new byte[]{64, 65});
+        List<Record> leftRecords = readRecordsFromPartitionDataFile(recordListAndSchema.sleeperSchema, leftFile, hadoopConfiguration);
+        List<Record> rightRecords = readRecordsFromPartitionDataFile(recordListAndSchema.sleeperSchema, rightFile, hadoopConfiguration);
+        List<Record> allRecords = Stream.of(leftRecords, rightRecords)
+                .flatMap(List::stream).collect(Collectors.toUnmodifiableList());
+
+        assertThat(Paths.get(ingestLocalWorkingDirectory)).isEmptyDirectory();
+        assertThat(actualFiles).containsExactlyInAnyOrder(leftFile, rightFile);
+        assertThat(allRecords).containsExactlyInAnyOrderElementsOf(recordListAndSchema.recordList);
+        assertThat(leftRecords)
+                .extracting(record -> record.getValues(List.of("key0")).get(0))
+                .containsExactly(new byte[]{1, 1}, new byte[]{5});
+        assertThat(leftRecords)
+                .extracting(record -> record.getValues(List.of("key1")).get(0))
+                .containsExactly(new byte[]{2, 3}, new byte[]{99});
+        assertThat(rightRecords)
+                .extracting(record -> record.getValues(List.of("key0")).get(0))
+                .containsExactly(new byte[]{11, 2}, new byte[]{64, 65});
+        assertThat(rightRecords)
+                .extracting(record -> record.getValues(List.of("key1")).get(0))
+                .containsExactly(new byte[]{2, 2}, new byte[]{67, 68});
+
+        ResultVerifier.assertOnSketch(
+                recordListAndSchema.sleeperSchema.getField("key0").orElseThrow(),
+                recordListAndSchema,
+                actualFiles,
+                hadoopConfiguration
+        );
+        ResultVerifier.assertOnSketch(
+                recordListAndSchema.sleeperSchema.getField("key1").orElseThrow(),
+                recordListAndSchema,
+                actualFiles,
+                hadoopConfiguration
+        );
     }
 
     @ParameterizedTest
-    @MethodSource("parametersForTests")
+    @MethodSource("parameterObjsForTests")
     public void shouldWriteRecordsSplitByPartition2DimensionalIntLongKeyWhenSplitOnDim1(
-            QuinFunction<StateStore, Schema, String, String, Path, IngestCoordinator<Record>> ingestCoordinatorFactoryFn)
+            TestIngestType ingestType)
             throws StateStoreException, IOException, IteratorException {
         RecordGenerator.RecordListAndSchema recordListAndSchema = RecordGenerator.genericKey2D(
                 new IntType(), new LongType(),
                 Arrays.asList(0, 0, 100, 100),
                 Arrays.asList(1L, 20L, 1L, 50L));
-        Function<Key, Integer> keyToPartitionNoMappingFn = key -> (key.size() > 1 && ((Long) key.get(1)) < 10L) ? 0 : 1;
-        Map<Integer, Integer> partitionNoToExpectedNoOfFilesMap = Stream.of(
-                        new AbstractMap.SimpleEntry<>(0, 1),
-                        new AbstractMap.SimpleEntry<>(1, 1))
-                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
-
+        StateStore stateStore = createStateStore(recordListAndSchema.sleeperSchema);
         PartitionTree tree = new PartitionsBuilder(recordListAndSchema.sleeperSchema)
                 .rootFirst("root")
                 .splitToNewChildrenOnDimension("root", "left", "right", 1, 10L)
                 .buildTree();
+        stateStore.initialise(tree.getAllPartitions());
+        Instant stateStoreUpdateTime = Instant.parse("2023-08-08T11:20:00Z");
+        String ingestLocalWorkingDirectory = createTempDirectory(temporaryFolder, null).toString() + "/path/to/new/sub/directory";
+        IngestCoordinatorTestParameters parameters = createTestParameterBuilder()
+                .fileNames(List.of("leftFile", "rightFile"))
+                .fileUpdatedTimes(() -> stateStoreUpdateTime)
+                .stateStore(stateStore)
+                .schema(recordListAndSchema.sleeperSchema)
+                .workingDir(ingestLocalWorkingDirectory)
+                .build();
 
-        ingestAndVerify(recordListAndSchema,
-                tree,
-                recordListAndSchema.recordList,
-                keyToPartitionNoMappingFn,
-                partitionNoToExpectedNoOfFilesMap,
-                null,
-                ingestCoordinatorFactoryFn);
+        // When
+        ingestRecords(recordListAndSchema, parameters, ingestType);
+
+        // Then
+        List<FileInfo> actualFiles = stateStore.getActiveFiles();
+        FileInfoFactory fileInfoFactory = FileInfoFactory.builder()
+                .partitionTree(tree)
+                .lastStateStoreUpdate(stateStoreUpdateTime)
+                .schema(recordListAndSchema.sleeperSchema)
+                .build();
+        FileInfo rightFile = fileInfoFactory.partitionFile("right", ingestType.getFilePrefix(parameters) +
+                "/partition_right/rightFile.parquet", 2, 0, 100);
+        FileInfo leftFile = fileInfoFactory.partitionFile("left", ingestType.getFilePrefix(parameters) +
+                "/partition_left/leftFile.parquet", 2, 0, 100);
+        List<Record> leftRecords = ResultVerifier.readRecordsFromPartitionDataFile(recordListAndSchema.sleeperSchema, leftFile, hadoopConfiguration);
+        List<Record> rightRecords = ResultVerifier.readRecordsFromPartitionDataFile(recordListAndSchema.sleeperSchema, rightFile, hadoopConfiguration);
+        List<Record> allRecords = Stream.of(leftRecords, rightRecords)
+                .flatMap(List::stream).collect(Collectors.toUnmodifiableList());
+
+        assertThat(Paths.get(ingestLocalWorkingDirectory)).isEmptyDirectory();
+        assertThat(actualFiles).containsExactlyInAnyOrder(leftFile, rightFile);
+        assertThat(allRecords).containsExactlyInAnyOrderElementsOf(recordListAndSchema.recordList);
+        assertThat(leftRecords)
+                .extracting(record -> record.getValues(List.of("key0", "key1")))
+                .containsExactly(List.of(0, 1L), List.of(100, 1L));
+        assertThat(rightRecords)
+                .extracting(record -> record.getValues(List.of("key0", "key1")))
+                .containsExactly(List.of(0, 20L), List.of(100, 50L));
+
+        ResultVerifier.assertOnSketch(
+                recordListAndSchema.sleeperSchema.getField("key0").orElseThrow(),
+                recordListAndSchema,
+                actualFiles,
+                hadoopConfiguration
+        );
+        ResultVerifier.assertOnSketch(
+                recordListAndSchema.sleeperSchema.getField("key1").orElseThrow(),
+                recordListAndSchema,
+                actualFiles,
+                hadoopConfiguration
+        );
     }
 
     @ParameterizedTest
-    @MethodSource("parametersForTests")
+    @MethodSource("parameterObjsForTests")
     public void shouldWriteRecordsSplitByPartition2DimensionalLongStringKeyWhenSplitOnDim1(
-            QuinFunction<StateStore, Schema, String, String, Path, IngestCoordinator<Record>> ingestCoordinatorFactoryFn)
+            TestIngestType ingestType)
             throws StateStoreException, IOException, IteratorException {
         RecordGenerator.RecordListAndSchema recordListAndSchema = RecordGenerator.genericKey2D(
                 new LongType(), new StringType(),
-                LongStream.range(-100L, 100).boxed().collect(Collectors.toList()),
-                LongStream.range(-100L, 100).mapToObj(Long::toString).collect(Collectors.toList()));
-        Function<Key, Integer> keyToPartitionNoMappingFn = key -> (key.size() > 1 && ((String) key.get(1)).compareTo("2") < 0) ? 0 : 1;
-        Map<Integer, Integer> partitionNoToExpectedNoOfFilesMap = Stream.of(
-                        new AbstractMap.SimpleEntry<>(0, 1),
-                        new AbstractMap.SimpleEntry<>(1, 1))
-                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
-
+                LongStream.range(-100L, 100L).boxed().collect(Collectors.toList()),
+                LongStream.range(-100L, 100L).mapToObj(Long::toString).collect(Collectors.toList()));
+        StateStore stateStore = createStateStore(recordListAndSchema.sleeperSchema);
         PartitionTree tree = new PartitionsBuilder(recordListAndSchema.sleeperSchema)
                 .rootFirst("root")
                 .splitToNewChildrenOnDimension("root", "left", "right", 1, "2")
                 .buildTree();
+        stateStore.initialise(tree.getAllPartitions());
+        Instant stateStoreUpdateTime = Instant.parse("2023-08-08T11:20:00Z");
+        String ingestLocalWorkingDirectory = createTempDirectory(temporaryFolder, null).toString() + "/path/to/new/sub/directory";
+        IngestCoordinatorTestParameters parameters = createTestParameterBuilder()
+                .fileNames(List.of("leftFile", "rightFile"))
+                .fileUpdatedTimes(() -> stateStoreUpdateTime)
+                .stateStore(stateStore)
+                .schema(recordListAndSchema.sleeperSchema)
+                .workingDir(ingestLocalWorkingDirectory)
+                .build();
 
-        ingestAndVerify(recordListAndSchema,
-                tree,
-                recordListAndSchema.recordList,
-                keyToPartitionNoMappingFn,
-                partitionNoToExpectedNoOfFilesMap,
-                null,
-                ingestCoordinatorFactoryFn);
+        // When
+        ingestRecords(recordListAndSchema, parameters, ingestType);
+
+        // Then
+        List<FileInfo> actualFiles = stateStore.getActiveFiles();
+        FileInfoFactory fileInfoFactory = FileInfoFactory.builder()
+                .partitionTree(tree)
+                .lastStateStoreUpdate(stateStoreUpdateTime)
+                .schema(recordListAndSchema.sleeperSchema)
+                .build();
+        FileInfo leftFile = fileInfoFactory.partitionFile("left", ingestType.getFilePrefix(parameters) +
+                "/partition_left/leftFile.parquet", 112, -100L, 19L);
+        FileInfo rightFile = fileInfoFactory.partitionFile("right", ingestType.getFilePrefix(parameters) +
+                "/partition_right/rightFile.parquet", 88, 2L, 99L);
+        List<Record> leftRecords = ResultVerifier.readRecordsFromPartitionDataFile(recordListAndSchema.sleeperSchema, leftFile, hadoopConfiguration);
+        List<Record> rightRecords = ResultVerifier.readRecordsFromPartitionDataFile(recordListAndSchema.sleeperSchema, rightFile, hadoopConfiguration);
+        List<Record> allRecords = Stream.of(leftRecords, rightRecords)
+                .flatMap(List::stream).collect(Collectors.toUnmodifiableList());
+
+        assertThat(Paths.get(ingestLocalWorkingDirectory)).isEmptyDirectory();
+        assertThat(actualFiles).containsExactlyInAnyOrder(leftFile, rightFile);
+        assertThat(allRecords).containsExactlyInAnyOrderElementsOf(recordListAndSchema.recordList);
+        assertThat(leftRecords)
+                .extracting(record -> record.getValues(List.of("key0", "key1")))
+                .containsExactlyElementsOf(LongStream.concat(LongStream.range(-100L, 2L), LongStream.range(10L, 20L))
+                        .boxed()
+                        .map(x -> List.<Object>of(x, String.valueOf(x)))
+                        .collect(Collectors.toList())
+                );
+        assertThat(rightRecords)
+                .extracting(record -> record.getValues(List.of("key0", "key1")))
+                .containsExactlyElementsOf(LongStream.concat(LongStream.range(2L, 10L), LongStream.range(20L, 100L))
+                        .boxed()
+                        .map(x -> List.<Object>of(x, String.valueOf(x)))
+                        .collect(Collectors.toList())
+                );
+
+        ResultVerifier.assertOnSketch(
+                recordListAndSchema.sleeperSchema.getField("key0").orElseThrow(),
+                recordListAndSchema,
+                actualFiles,
+                hadoopConfiguration
+        );
+        ResultVerifier.assertOnSketch(
+                recordListAndSchema.sleeperSchema.getField("key1").orElseThrow(),
+                recordListAndSchema,
+                actualFiles,
+                hadoopConfiguration
+        );
     }
 
     @ParameterizedTest
-    @MethodSource("parametersForTests")
+    @MethodSource("parameterObjsForTests")
     public void shouldWriteRecordsSplitByPartitionWhenThereIsOnlyDataInOnePartition(
-            QuinFunction<StateStore, Schema, String, String, Path, IngestCoordinator<Record>> ingestCoordinatorFactoryFn)
+            TestIngestType ingestType)
             throws StateStoreException, IOException, IteratorException {
-        RecordGenerator.RecordListAndSchema recordListAndSchema = RecordGenerator.genericKey1D(
+        RecordGenerator.RecordListAndSchema recordListAndSchema = genericKey1D(
                 new LongType(),
                 Arrays.asList(1L, 0L));
-
-        Function<Key, Integer> keyToPartitionNoMappingFn = key -> (((Long) key.get(0)) < 2L) ? 0 : 1;
-        Map<Integer, Integer> partitionNoToExpectedNoOfFilesMap = Stream.of(
-                        new AbstractMap.SimpleEntry<>(0, 1),
-                        new AbstractMap.SimpleEntry<>(1, 0))
-                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
-
+        StateStore stateStore = createStateStore(recordListAndSchema.sleeperSchema);
         PartitionTree tree = new PartitionsBuilder(recordListAndSchema.sleeperSchema)
                 .rootFirst("root")
                 .splitToNewChildren("root", "left", "right", 2L)
                 .buildTree();
+        stateStore.initialise(tree.getAllPartitions());
+        Instant stateStoreUpdateTime = Instant.parse("2023-08-08T11:20:00Z");
+        String ingestLocalWorkingDirectory = createTempDirectory(temporaryFolder, null).toString() + "/path/to/new/sub/directory";
+        IngestCoordinatorTestParameters parameters = createTestParameterBuilder()
+                .fileNames(List.of("leftFile", "rightFile"))
+                .fileUpdatedTimes(() -> stateStoreUpdateTime)
+                .stateStore(stateStore)
+                .schema(recordListAndSchema.sleeperSchema)
+                .workingDir(ingestLocalWorkingDirectory)
+                .build();
 
-        ingestAndVerify(recordListAndSchema,
-                tree,
-                recordListAndSchema.recordList,
-                keyToPartitionNoMappingFn,
-                partitionNoToExpectedNoOfFilesMap,
-                null,
-                ingestCoordinatorFactoryFn);
+        // When
+        ingestRecords(recordListAndSchema, parameters, ingestType);
+
+        // Then
+        List<FileInfo> actualFiles = stateStore.getActiveFiles();
+        List<Record> actualRecords = readMergedRecordsFromPartitionDataFiles(recordListAndSchema.sleeperSchema, actualFiles, hadoopConfiguration);
+        FileInfoFactory fileInfoFactory = FileInfoFactory.builder()
+                .partitionTree(tree)
+                .lastStateStoreUpdate(stateStoreUpdateTime)
+                .schema(recordListAndSchema.sleeperSchema)
+                .build();
+        FileInfo expectedFile = fileInfoFactory.leafFile(ingestType.getFilePrefix(parameters) + "/partition_left/leftFile.parquet", 2, 0L, 1L);
+        assertThat(Paths.get(ingestLocalWorkingDirectory)).isEmptyDirectory();
+        assertThat(actualFiles).containsExactly(expectedFile);
+        assertThat(actualRecords).containsExactlyInAnyOrderElementsOf(recordListAndSchema.recordList);
+        assertThat(actualRecords).extracting(record -> record.getValues(List.of("key0")))
+                .containsExactly(List.of(0L), List.of(1L));
+
+        ResultVerifier.assertOnSketch(
+                recordListAndSchema.sleeperSchema.getField("key0").orElseThrow(),
+                recordListAndSchema,
+                actualFiles,
+                hadoopConfiguration
+        );
     }
 
     @ParameterizedTest
-    @MethodSource("parametersForTests")
+    @MethodSource("parameterObjsForTests")
     public void shouldWriteDuplicateRecords(
-            QuinFunction<StateStore, Schema, String, String, Path, IngestCoordinator<Record>> ingestCoordinatorFactoryFn)
+            TestIngestType ingestType)
             throws StateStoreException, IOException, IteratorException {
-        RecordGenerator.RecordListAndSchema recordListAndSchema = RecordGenerator.genericKey1D(
+        RecordGenerator.RecordListAndSchema recordListAndSchema = genericKey1D(
                 new LongType(),
                 LongStream.range(-100, 100).boxed().collect(Collectors.toList()));
         RecordGenerator.RecordListAndSchema duplicatedRecordListAndSchema = new RecordGenerator.RecordListAndSchema(
@@ -595,117 +802,169 @@ public class IngestCoordinatorCommonIT {
                         .flatMap(List::stream)
                         .collect(Collectors.toList()),
                 recordListAndSchema.sleeperSchema);
-        Function<Key, Integer> keyToPartitionNoMappingFn = key -> 0;
-        Map<Integer, Integer> partitionNoToExpectedNoOfFilesMap = Stream.of(
-                        new AbstractMap.SimpleEntry<>(0, 1))
-                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
-
-        PartitionTree tree = new PartitionsBuilder(recordListAndSchema.sleeperSchema)
+        StateStore stateStore = createStateStore(recordListAndSchema.sleeperSchema);
+        PartitionTree tree = new PartitionsBuilder(duplicatedRecordListAndSchema.sleeperSchema)
                 .rootFirst("root")
                 .buildTree();
+        stateStore.initialise(tree.getAllPartitions());
+        Instant stateStoreUpdateTime = Instant.parse("2023-08-08T11:20:00Z");
+        String ingestLocalWorkingDirectory = createTempDirectory(temporaryFolder, null).toString() + "/path/to/new/sub/directory";
+        IngestCoordinatorTestParameters parameters = createTestParameterBuilder()
+                .fileNames(List.of("leftFile", "rightFile"))
+                .fileUpdatedTimes(() -> stateStoreUpdateTime)
+                .stateStore(stateStore)
+                .schema(duplicatedRecordListAndSchema.sleeperSchema)
+                .workingDir(ingestLocalWorkingDirectory)
+                .build();
 
-        ingestAndVerify(duplicatedRecordListAndSchema,
-                tree,
-                duplicatedRecordListAndSchema.recordList,
-                keyToPartitionNoMappingFn,
-                partitionNoToExpectedNoOfFilesMap,
-                null,
-                ingestCoordinatorFactoryFn);
+        // When
+        ingestRecords(duplicatedRecordListAndSchema, parameters, ingestType);
+
+        // Then
+        List<FileInfo> actualFiles = stateStore.getActiveFiles();
+        List<Record> actualRecords = readMergedRecordsFromPartitionDataFiles(duplicatedRecordListAndSchema.sleeperSchema, actualFiles, hadoopConfiguration);
+        FileInfoFactory fileInfoFactory = FileInfoFactory.builder()
+                .partitionTree(tree)
+                .lastStateStoreUpdate(stateStoreUpdateTime)
+                .schema(duplicatedRecordListAndSchema.sleeperSchema)
+                .build();
+        FileInfo expectedFile = fileInfoFactory.leafFile(ingestType.getFilePrefix(parameters) + "/partition_root/leftFile.parquet", 400, -100L, 99L);
+        assertThat(Paths.get(ingestLocalWorkingDirectory)).isEmptyDirectory();
+        assertThat(actualFiles).containsExactly(expectedFile);
+        assertThat(actualRecords).containsExactlyInAnyOrderElementsOf(duplicatedRecordListAndSchema.recordList);
+        assertThat(actualRecords).extracting(record -> record.getValues(List.of("key0")).get(0))
+                .containsExactlyElementsOf(LongStream.range(-100, 100).boxed()
+                        .flatMap(longValue -> Stream.of(longValue, longValue))
+                        .collect(Collectors.toList()));
+
+        ResultVerifier.assertOnSketch(
+                recordListAndSchema.sleeperSchema.getField("key0").orElseThrow(),
+                duplicatedRecordListAndSchema,
+                actualFiles,
+                hadoopConfiguration
+        );
     }
 
     @ParameterizedTest
-    @MethodSource("parametersForTests")
-    public void shouldWriteNoRecordsSuccessfully(
-            QuinFunction<StateStore, Schema, String, String, Path, IngestCoordinator<Record>> ingestCoordinatorFactoryFn)
+    @MethodSource("parameterObjsForTests")
+    public void shouldWriteNoRecordsSuccessfully(TestIngestType ingestType)
             throws StateStoreException, IOException, IteratorException {
-        RecordGenerator.RecordListAndSchema recordListAndSchema = RecordGenerator.genericKey1D(
+        RecordGenerator.RecordListAndSchema recordListAndSchema = genericKey1D(
                 new LongType(),
                 Collections.emptyList());
-        Function<Key, Integer> keyToPartitionNoMappingFn = key -> 0;
-        Map<Integer, Integer> partitionNoToExpectedNoOfFilesMap = Stream.of(
-                        new AbstractMap.SimpleEntry<>(0, 0))
-                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
-
+        StateStore stateStore = createStateStore(recordListAndSchema.sleeperSchema);
         PartitionTree tree = new PartitionsBuilder(recordListAndSchema.sleeperSchema)
                 .rootFirst("root")
                 .buildTree();
+        stateStore.initialise(tree.getAllPartitions());
+        String ingestLocalWorkingDirectory = createTempDirectory(temporaryFolder, null).toString() + "/path/to/new/sub/directory";
+        IngestCoordinatorTestParameters parameters = createTestParameterBuilder()
+                .fileNames(List.of())
+                .fileUpdatedTimes(List.of())
+                .stateStore(stateStore)
+                .schema(recordListAndSchema.sleeperSchema)
+                .workingDir(ingestLocalWorkingDirectory)
+                .build();
 
-        ingestAndVerify(recordListAndSchema,
-                tree,
-                recordListAndSchema.recordList,
-                keyToPartitionNoMappingFn,
-                partitionNoToExpectedNoOfFilesMap,
-                null,
-                ingestCoordinatorFactoryFn);
+        // When
+        ingestRecords(recordListAndSchema, parameters, ingestType);
+
+        // Then
+        List<FileInfo> actualFiles = stateStore.getActiveFiles();
+        List<Record> actualRecords = readMergedRecordsFromPartitionDataFiles(recordListAndSchema.sleeperSchema, actualFiles, hadoopConfiguration);
+        assertThat(actualFiles).isEmpty();
+        assertThat(actualRecords).isEmpty();
     }
 
     @ParameterizedTest
-    @MethodSource("parametersForTests")
+    @MethodSource("parameterObjsForTests")
     public void shouldApplyIterator(
-            QuinFunction<StateStore, Schema, String, String, Path, IngestCoordinator<Record>> ingestCoordinatorFactoryFn)
+            TestIngestType ingestType)
             throws StateStoreException, IOException, IteratorException {
         RecordGenerator.RecordListAndSchema recordListAndSchema = RecordGenerator.byteArrayRowKeyLongSortKey(
                 Arrays.asList(new byte[]{1, 1}, new byte[]{1, 1}, new byte[]{11, 12}, new byte[]{11, 12}),
                 Arrays.asList(1L, 1L, 2L, 2L),
                 Arrays.asList(1L, 2L, 3L, 4L));
-        Record expectedRecord1 = new Record();
-        expectedRecord1.put(recordListAndSchema.sleeperSchema.getRowKeyFieldNames().get(0), new byte[]{1, 1});
-        expectedRecord1.put(recordListAndSchema.sleeperSchema.getSortKeyFieldNames().get(0), 1L);
-        expectedRecord1.put(recordListAndSchema.sleeperSchema.getValueFieldNames().get(0), 3L);
-        Record expectedRecord2 = new Record();
-        expectedRecord2.put(recordListAndSchema.sleeperSchema.getRowKeyFieldNames().get(0), new byte[]{11, 12});
-        expectedRecord2.put(recordListAndSchema.sleeperSchema.getSortKeyFieldNames().get(0), 2L);
-        expectedRecord2.put(recordListAndSchema.sleeperSchema.getValueFieldNames().get(0), 7L);
-        List<Record> expectedAggregatedRecords = Arrays.asList(expectedRecord1, expectedRecord2);
-        Function<Key, Integer> keyToPartitionNoMappingFn = key -> 0;
-        Map<Integer, Integer> partitionNoToExpectedNoOfFilesMap = Stream.of(
-                        new AbstractMap.SimpleEntry<>(0, 1))
-                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
-
+        List<Record> expectedRecords = List.of(
+                new Record(Map.of(
+                        "key", new byte[]{1, 1},
+                        "sort", 1L,
+                        "value", 3L
+                )), new Record(Map.of(
+                        "key", new byte[]{11, 12},
+                        "sort", 2L,
+                        "value", 7L
+                )));
+        StateStore stateStore = createStateStore(recordListAndSchema.sleeperSchema);
         PartitionTree tree = new PartitionsBuilder(recordListAndSchema.sleeperSchema)
                 .rootFirst("root")
                 .buildTree();
-        ingestAndVerify(recordListAndSchema,
-                tree,
-                expectedAggregatedRecords,
-                keyToPartitionNoMappingFn,
-                partitionNoToExpectedNoOfFilesMap,
-                AdditionIterator.class.getName(),
-                ingestCoordinatorFactoryFn);
+        stateStore.initialise(tree.getAllPartitions());
+        Instant stateStoreUpdateTime = Instant.parse("2023-08-08T11:20:00Z");
+        String ingestLocalWorkingDirectory = createTempDirectory(temporaryFolder, null).toString() + "/path/to/new/sub/directory";
+        IngestCoordinatorTestParameters parameters = createTestParameterBuilder()
+                .fileNames(List.of("rootFile"))
+                .fileUpdatedTimes(() -> stateStoreUpdateTime)
+                .stateStore(stateStore)
+                .schema(recordListAndSchema.sleeperSchema)
+                .workingDir(ingestLocalWorkingDirectory)
+                .iteratorClassName(AdditionIterator.class.getName())
+                .build();
+
+        // When
+        ingestRecords(recordListAndSchema, parameters, ingestType);
+
+        // Then
+        List<FileInfo> actualFiles = stateStore.getActiveFiles();
+        List<Record> actualRecords = readMergedRecordsFromPartitionDataFiles(recordListAndSchema.sleeperSchema, actualFiles, hadoopConfiguration);
+        FileInfoFactory fileInfoFactory = FileInfoFactory.builder()
+                .partitionTree(tree)
+                .lastStateStoreUpdate(stateStoreUpdateTime)
+                .schema(recordListAndSchema.sleeperSchema)
+                .build();
+        FileInfo expectedFile = fileInfoFactory.leafFile(ingestType.getFilePrefix(parameters) + "/partition_root/rootFile.parquet", 2, new byte[]{1, 1}, new byte[]{11, 12});
+        assertThat(Paths.get(ingestLocalWorkingDirectory)).isEmptyDirectory();
+        assertThat(actualFiles).containsExactly(expectedFile);
+        assertThat(actualRecords).containsExactlyElementsOf(expectedRecords);
+
+        ResultVerifier.assertOnSketch(
+                recordListAndSchema.sleeperSchema.getField("key").orElseThrow(),
+                new RecordGenerator.RecordListAndSchema(expectedRecords, recordListAndSchema.sleeperSchema),
+                actualFiles,
+                hadoopConfiguration
+        );
     }
 
-    private void ingestAndVerify(
+    private Supplier<String> randomStringGeneratorWithMaxLength(Integer maxLength) {
+        Random random = new Random(0);
+        RandomStringGenerator randomStringGenerator = new RandomStringGenerator.Builder()
+                .usingRandom(random::nextInt)
+                .build();
+        return () -> randomStringGenerator.generate(random.nextInt(maxLength));
+    }
+
+
+    private void ingestRecords(
             RecordGenerator.RecordListAndSchema recordListAndSchema,
-            PartitionTree tree,
-            List<Record> expectedRecordsList,
-            Function<Key, Integer> keyToPartitionNoMappingFn,
-            Map<Integer, Integer> partitionNoToExpectedNoOfFilesMap,
-            String sleeperIteratorClassName,
-            QuinFunction<StateStore, Schema, String, String, Path, IngestCoordinator<Record>> ingestCoordinatorFactoryFn) throws IOException, StateStoreException, IteratorException {
-
-        DynamoDBStateStore stateStore = new DynamoDBStateStoreCreator(UUID.randomUUID().toString(), recordListAndSchema.sleeperSchema, AWS_EXTERNAL_RESOURCE.getDynamoDBClient()).create();
-        stateStore.initialise(tree.getAllPartitions());
-
-        // A deep working directory forces the ingest coordinator to create a deep tree of directories
-        String ingestLocalWorkingDirectory = createTempDirectory(temporaryFolder, null).toString() + "/path/to/new/sub/directory";
+            IngestCoordinatorTestParameters ingestCoordinatorTestParameters,
+            TestIngestType ingestType
+    ) throws StateStoreException, IteratorException, IOException {
         try (IngestCoordinator<Record> ingestCoordinator =
-                     ingestCoordinatorFactoryFn.apply(
-                             stateStore,
-                             recordListAndSchema.sleeperSchema,
-                             sleeperIteratorClassName,
-                             ingestLocalWorkingDirectory,
-                             temporaryFolder)) {
+                     ingestType.createIngestCoordinator(
+                             ingestCoordinatorTestParameters)) {
             for (Record record : recordListAndSchema.recordList) {
                 ingestCoordinator.write(record);
             }
         }
-        ResultVerifier.verify(
-                stateStore,
-                recordListAndSchema.sleeperSchema,
-                keyToPartitionNoMappingFn,
-                expectedRecordsList,
-                partitionNoToExpectedNoOfFilesMap,
-                AWS_EXTERNAL_RESOURCE.getHadoopConfiguration(),
-                ingestLocalWorkingDirectory);
+    }
+
+
+    private IngestCoordinatorTestParameters.Builder createTestParameterBuilder() {
+        return IngestCoordinatorTestParameters
+                .builder()
+                .temporaryFolder(temporaryFolder)
+                .hadoopConfiguration(hadoopConfiguration)
+                .s3AsyncClient(s3Async)
+                .dataBucketName(dataBucketName);
     }
 }
